--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/src/output.css" rel="stylesheet">
+  <link href="./output.css" rel="stylesheet">
   <script>
     /*darkomode disini*/
     </script>
@@ -80,7 +80,7 @@
           </div>
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:right-0 lg:mt-9">
-              <img src="/src/undraw_continuous-learning_a1ld-removebg-preview.png" alt="mugi" class="relative z-10 mx-auto max-w-full" />
+              <img src="./undraw_continuous-learning_a1ld-removebg-preview.png" alt="mugi" class="relative z-10 mx-auto max-w-full" />
               <span class="absolute bottom-0 left-1/2 -translate-x-1/2 md:scale-125">
                 <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -203,14 +203,14 @@
         <div class="flex w-full flex-wrap justify-center px-4 xl:mx-auto xl:w-10/12">
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
-              <img src="/src/foto3.jpg" alt="Landing Page" width="w-full" />
+              <img src="./foto3.jpg" alt="Landing Page" width="w-full" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">🫶🏻</h3>
             <p class="text-base font-medium text-paragraf">ini saya, saya orangnya suka dengan ketenangan, apalagi kalau ketemu temen yg paham dengan ketenangan yg diriku maksud.</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
-              <img src="/src/foto2.jpg" alt="E-Commerce" width="w-full" />
+              <img src="./foto2.jpg" alt="E-Commerce" width="w-full" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">🍵</h3>
             <p class="text-base font-medium text-secondary">Matcha itu favoritku🍵 sama seperti orang yg ada difoto, favoritku.</p>
@@ -218,7 +218,7 @@
 
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
-              <img src="/src/foto6.jpg" alt="Technical Documentation" width="w-full" />
+              <img src="./foto6.jpg" alt="Technical Documentation" width="w-full" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">👨🏻‍👩🏻‍👧🏻‍👧🏻</h3>
             <p class="text-base font-medium text-secondary">Keluarga harmonis adalah keluarga yang hidup dalam suasana penuh kasih sayang, saling menghargai, dan mendukung satu sama lain.</p>
@@ -226,7 +226,7 @@
           
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
-              <img src="/src/foto5.jpg" alt="Tribute Page" width="w-full" />
+              <img src="./foto5.jpg" alt="Tribute Page" width="w-full" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">✨</h3>
             <p class="text-base font-medium text-secondary">saya suka banget ngedrakor.</p>
@@ -250,19 +250,19 @@
         <div class="w-full px-4">
           <div class="flex flex-wrap items-center justify-center">
             <a href="#" class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
-              <img src="/src/img/client/axioo.png" alt="Google" />
+              <img src="./img/client/axioo.png" alt="Google" />
             </a>
             <a href="#" class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
-              <img src="/src/img/client/sumitomo.png" alt="Gojek" />
+              <img src="./img/client/sumitomo.png" alt="Gojek" />
             </a>
             <a href="#" class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
-              <img src="/src/img/client/tdk.png" alt="Tokopedia" />
+              <img src="./img/client/tdk.png" alt="Tokopedia" />
             </a>
             <a href="#" class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
-              <img src="/src/img/client/telkom.png" alt="traveloka" />
+              <img src="./img/client/telkom.png" alt="traveloka" />
             </a>
             <a href="#" class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
-              <img src="/src/schneider.png" alt="traveloka" />
+              <img src="./schneider.png" alt="traveloka" />
             </a>
           </div>
         </div>
@@ -321,7 +321,8 @@
     </a>
 <!-- Back to top End -->
 
-  <script src="/src/js/script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
+
